force-app/main/default/objects/Subscription__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Date when trial or paid entitlement expires.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>