force-app/main/default/objects/Subscription__c/fields/Grace_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_End__c</fullName>
    <label>Grace Period End</label>
    <type>Date</type>
    <description>End date of the grace period after trial or subscription expiration. Features remain available until this date.</description>
</CustomField>