force-app/main/default/objects/Subscription__c/fields/Last_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Event__c</fullName>
    <description>Last billing event applied to this subscription record.</description>
    <label>Last Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>