force-app/main/default/objects/Subscription__c/fields/Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync__c</fullName>
    <description>Timestamp when billing last synchronized this subscription.</description>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>