force-app/main/default/objects/Subscription__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>Salesforce Organization Id for the subscriber org. Used as the external id for billing sync.</description>
    <externalId>true</externalId>
    <label>Org Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>