force-app/main/default/objects/Subscription__c/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <label>Package Version</label>
    <type>Text</type>
    <length>20</length>
    <description>Version of the SentinelFlow managed package installed in the subscriber org.</description>
</CustomField>