force-app/main/default/objects/Subscription__c/fields/Stripe_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Id__c</fullName>
    <description>Stripe customer id associated with the subscriber org.</description>
    <label>Stripe Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>