force-app/main/default/objects/Subscription__c/fields/Stripe_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Id__c</fullName>
    <description>Stripe subscription id associated with the subscriber org.</description>
    <label>Stripe Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>